# Engine-Scripting-Pong

./: CMakeLists.txt  README.md
scripts/: config.lua
src/: Ball.h  Game.cpp  Game.h  Paddle.h  main.cpp
src/Scripting/: LuaBindings.cpp  LuaBindings.h
src/System/: MovementSystem.cpp  MovementSystem.h  RenderSystem.cpp  RenderSystem.h
